--- a/src/main/resources/lang/en.json
+++ b/src/main/resources/lang/en.json
@@ -1,26 +1,47 @@
 {
     "prefix": "[Events] ",
-    "messages": {
+    
+    "commands": {
         "no_permission": "You don't have permission to use this command!",
-        "event_triggered": "Event '{event}' has been triggered!",
-        "event_not_found": "Event '{event}' was not found!",
-        "event_enabled": "Event '{event}' has been enabled!",
-        "event_disabled": "Event '{event}' has been disabled!",
-        "config_reloaded": "Configuration reloaded successfully!",
-        "help_title": "========== Events Scheduler ==========",
-        "help_list": "/events list - List all events",
-        "help_trigger": "/events trigger <name> - Manually trigger an event",
-        "help_enable": "/events enable <name> - Enable an event",
-        "help_disable": "/events disable <name> - Disable an event",
-        "help_reload": "/events reload - Reload configuration",
-        "help_footer": "=======================================",
-        "list_interval_title": "========== Interval Events ==========",
-        "list_scheduled_title": "========== Scheduled Events ==========",
-        "list_footer": "======================================",
-        "status_active": "[ACTIVE]",
-        "status_inactive": "[DISABLED]",
-        "interval_format": "{status} {name} - Every {interval} seconds",
-        "scheduled_format": "{status} {name} - Times: {times}",
-        "commands_label": "  Commands: {commands}"
+        "usage": "Usage: {0}",
+        
+        "events": {
+            "title": "========== Events Scheduler ==========",
+            "interval_title": "--- Interval Events ---",
+            "scheduled_title": "--- Scheduled Events ---",
+            "commands_title": "Commands:",
+            "footer": "=======================================",
+            "empty": "",
+            "status_active": "[ACTIVE]",
+            "status_disabled": "[DISABLED]",
+            "interval_format": "{0} {1} - Every {2} seconds",
+            "scheduled_format": "{0} {1} - Times: {2}",
+            "commands_format": "  Commands: {0}",
+            "help_trigger": "  /eventstrigger --eventName <name> - Trigger event manually",
+            "help_reload": "  /eventsreload - Reload config",
+            "help_list": "  /events - Show event list"
+        },
+        
+        "trigger": {
+            "usage": "/eventstrigger --eventName <eventName>",
+            "success": "'{0}' event triggered!",
+            "not_found": "No event found with name '{0}'!"
+        },
+        
+        "reload": {
+            "success": "Config reloaded successfully!"
+        }
+    },
+    
+    "events": {
+        "broadcast_prefix": "[Events] ",
+        "min_players_not_met": "{0} cancelled: Not enough players ({1}/{2})"
+    },
+    
+    "general": {
+        "enabled": "Enabled",
+        "disabled": "Disabled",
+        "yes": "Yes",
+        "no": "No"
     }
 }
